tests/baselines/reference/ambientExternalModuleInsideNonAmbientExternalModule.errors.txt
tests/cases/conformance/ambient/ambientExternalModuleInsideNonAmbientExternalModule.ts(1,23): error TS2660: Invalid module name in augmentation, module 'M' cannot be found.


==== tests/cases/conformance/ambient/ambientExternalModuleInsideNonAmbientExternalModule.ts (1 errors) ====
    export declare module "M" { }
                          ~~~
!!! error TS2660: Invalid module name in augmentation, module 'M' cannot be found.